--- a/venta/src/main/resources/application.properties
+++ b/venta/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=venta
+server.port=8083
+
+spring.datasource.url=jdbc:mysql://localhost:3306/servicio_ventas?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
