--- a/producto/producto/pom.xml
+++ b/producto/producto/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.corales</groupId>
 	<artifactId>producto</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>producto</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
