--- a/producto/Dockerfile
+++ b/producto/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:17-jdk-slim
 ARG JAR_FILE=target/producto-0.0.1.jar
-COPY ${JAR_FILE} app_producto.jar
-ENTRYPOINT ["java", "-jar", "app_producto.jar"]
+COPY ${JAR_FILE} produc.jar
+ENTRYPOINT ["java", "-jar", "produc.jar"]
