--- a/producto/src/main/resources/application.properties
+++ b/producto/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=producto
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://mysql:3306/servicio_productos
+spring.datasource.url=jdbc:mysql://localhost:3306/servicio_productos
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,4 +9,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-eureka.client.service-url.defaultZone=http://eureka-sv:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
